--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
 name: Deploy to AWS
+
 on:
   push:
     branches: [main]
@@ -7,26 +8,32 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      # Checkout the repository
+      - uses: actions/checkout@v3 # Updated to latest version
 
+      # Setup Node.js
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3 # Updated to latest version
         with:
           node-version: "18"
 
+      # Install dependencies
       - name: Install dependencies
         run: npm ci
 
+      # Build the application
       - name: Build
         run: npm run build
 
+      # Configure AWS credentials
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2 # Updated to latest version
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
 
+      # Deploy infrastructure using AWS CDK
       - name: Deploy infrastructure
         run: |
           cd infrastructure
