--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,10 +38,10 @@ jobs:
 
       # Configure AWS credentials
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2 # Updated to latest version
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.NEXT_PUBLIC_CLOUD_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.NEXT_PUBLIC_CLOUD_ACCESS_KEY }}
           aws-region: us-east-2
 
       # Deploy infrastructure using AWS CDK
