--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@aws-cdk/aws-ec2": "^1.203.0",
-    "@aws-sdk/client-dynamodb": "^3.687.0",
-    "@aws-sdk/lib-dynamodb": "^3.687.0",
+    "@aws-sdk/client-dynamodb": "^3.693.0",
+    "@aws-sdk/lib-dynamodb": "^3.693.0",
     "aws-sdk": "^2.1692.0",
     "next": "^14.0.0",
     "react": "18.3.1",
