--- a/amplify.yml
+++ b/amplify.yml
@@ -1,17 +1,20 @@
 version: 1
-applications:
-  - frontend:
-      phases:
-        preBuild:
-          commands:
-            - npm ci
-        build:
-          commands:
-            - npm run build
-      artifacts:
-        baseDirectory: .next
-        files:
-          - "**/*"
-      cache:
-        paths:
-          - node_modules/**/*
+frontend:
+  phases:
+    preBuild:
+      commands:
+        - npm ci --cache .npm --prefer-offline
+    build:
+      commands:
+        - echo "NEXT_PUBLIC_CLOUD_ACCESS_KEY=$NEXT_PUBLIC_CLOUD_ACCESS_KEY" >> .env
+        - echo "NEXT_PUBLIC_CLOUD_KEY_ID=$NEXT_PUBLIC_CLOUD_KEY_ID" >> .env
+        - echo "NEXT_PUBLIC_CLOUD_REGION=$NEXT_PUBLIC_CLOUD_REGION" >> .env
+        - npm run build
+  artifacts:
+    baseDirectory: .next
+    files:
+      - "**/*"
+  cache:
+    paths:
+      - .next/cache/**/*
+      - .npm/**/*
